Fix alignment errors on css

--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 22.5px;
+  padding: 1px 22.5px;
   width: auto;
   position: relative;
+  height: 0.05px;
 }
 
 .logo {
@@ -45,10 +46,14 @@ body {
   display: none;
 }
 
+.desktop-image-div-2 {
+  display: none;
+}
+
 #main-div {
-  max-width: 1024px;
   padding: 0%;
   margin: 0 auto;
+  margin-top: -4%;
   background-image: url(./images/background/bg.png);
   background-repeat: no-repeat;
   background-position-x: 0%;
@@ -56,6 +61,10 @@ body {
   border-bottom-left-radius: 75px;
   padding-top: 50px;
   background-color: #fff;
+}
+
+.desktop-image-div-4 {
+  display: none;
 }
 
 .connect-message {
@@ -123,11 +132,11 @@ body {
   display: grid;
   grid-template-rows: repeat(3, auto);
   align-items: space-between;
-  padding-top: 20%;
+  padding-top: 10%;
 }
 
 #tonic-project {
-  margin: 0 5.6% 25% 5.6%;
+  margin: 0 5.6% 10% 5.6%;
   height: fit-content;
   border-radius: 16px;
   border: 1px solid #dfe1e5;
@@ -155,8 +164,8 @@ body {
 }
 
 .work-nature {
-  margin-left: -2%;
-  width: 80%;
+  margin-left: -1%;
+  width: 95%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -164,8 +173,8 @@ body {
 
 .canopy {
   font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
+  font-weight: 500;
+  font-size: 18px;
   line-height: 16px;
   margin-top: 1%;
   color: #344563;
@@ -173,8 +182,8 @@ body {
 
 .backend {
   font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
+  font-weight: 400;
+  font-size: 18px;
   line-height: 16px;
   margin-top: 1%;
   color: #7a868a;
@@ -182,8 +191,8 @@ body {
 
 .year {
   font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
+  font-weight: 400;
+  font-size: 18px;
   line-height: 16px;
   margin-top: 1%;
   color: #7a868a;
@@ -191,7 +200,7 @@ body {
 
 .work-description {
   font-style: normal;
-  padding-left: 3px;
+  padding-left: 1px;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
@@ -214,7 +223,7 @@ body {
   padding: 4px 12px;
   margin-right: 2.5px;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #ebebff;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -225,7 +234,7 @@ body {
 
 .see-project {
   margin-top: 5px;
-  width: 45%;
+  width: 44%;
   background-color: white;
   border: 1px solid #6070ff;
   border-radius: 6px;
@@ -389,7 +398,7 @@ body {
   background-position-x: right;
   width: 100%;
   height: fit-content;
-  padding-top: 14%;
+  padding-top: 4%;
   margin-left: 0%;
   display: flex;
   flex-direction: column;
@@ -412,7 +421,7 @@ body {
   font-style: normal;
   line-height: 28px;
   font-family: "Poppins", sans-serif;
-  margin-top: 2%;
+  margin-top: 0%;
   text-align: center;
   color: #ebebff;
   font-weight: 400;
@@ -497,7 +506,7 @@ body {
 
 @media screen and (min-width: 768px) {
   body {
-    min-width: 768px;
+    width: 100%;
     margin: 0;
   }
 
@@ -508,6 +517,21 @@ body {
 
   .image-div {
     display: none;
+  }
+
+  .logo {
+    color: #6070ff;
+    transition: all 1s;
+  }
+
+  .logo:hover {
+    transform: rotate(360deg);
+  }
+
+  .see-project:hover {
+    background: #396df2;
+    color: #fff;
+    transition: 0.8s;
   }
 
   .data {
@@ -533,18 +557,7 @@ body {
     margin-top: 0;
   }
 
-  .desktop-image-div-2 {
-    float: right;
-    display: flex;
-    margin-right: 2.5%;
-    width: 50%;
-    justify-content: space-between;
-    flex-direction: column;
-    margin-bottom: 0;
-  }
-
   .project-content-2 {
-    float: none;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -552,9 +565,37 @@ body {
     margin-top: 0;
   }
 
+  .desktop-image-div-2 {
+    display: flex;
+    margin-right: 2.5%;
+    width: 50%;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-bottom: 0;
+    order: 2;
+  }
+
+  .project-content-4 {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 0;
+  }
+
+  .desktop-image-div-4 {
+    display: flex;
+    margin-right: 2.5%;
+    width: 50%;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-bottom: 0;
+    order: 2;
+  }
+
   #main-div {
     margin: 0%;
-    margin-top: 0%;
+    margin-top: -4%;
     padding: 5%;
     background: none;
     background-color: #fff;
@@ -563,7 +604,8 @@ body {
   #introduction-paragraphs {
     background: url(./images/desktop/header\ background\ shape-desktop.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+    width: 100%;
+    background-size: cover;
     padding-top: 15%;
     position: relative;
     height: auto;
@@ -596,11 +638,11 @@ body {
     display: flex;
     flex-direction: row;
     background-color: #fff;
-    padding-bottom: 25%;
     padding-right: 0%;
     height: fit-content;
     border: 1px solid #dfe1e5;
     border-top-right-radius: 75px;
+    margin-bottom: 0%;
   }
 
   #mobile-nav {
